1.3:
Show combined network speed for all devices

1.2 (2016.02.09):
Layout fixes
Shortened speed units config option

1.1 (2016.01.18):
Layout fixes
Font size config option

1.0 (2016.01.16):
First release