@@ -1,5 +1,6 @@
 1.3:
 Show combined network speed for all devices
+Display proper (long) speed units
 
 1.2 (2016.02.09):
 Layout fixes
